--- a/CocheAmigos2/Views/Account/RememberPassword.cshtml
+++ b/CocheAmigos2/Views/Account/RememberPassword.cshtml
@@ -7,6 +7,7 @@
 
 @using (Html.BeginForm())
 {
+    @ViewBag.Confirmation
     @Html.ValidationSummary(true)
     <div class="editor-label">
         @Html.LabelFor(m => m.Email)
