--- a/CocheAmigos2/Views/Shared/_Layout.cshtml
+++ b/CocheAmigos2/Views/Shared/_Layout.cshtml
@@ -4,6 +4,10 @@
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
+    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css" />
+
 </head>
 <body>
     <div class="page">
@@ -18,6 +22,8 @@
                 <ul id="menu">
                     <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
                     <li>@Html.ActionLink("Search a trip", "Index", "Main")</li>
+                    <li>@Html.ActionLink("Register", "Register", "User")</li>
+                    <li>@Html.ActionLink("Google Maps", "Index", "Journey")</li>
                 </ul>
             </div>
         </div>
